--- a/src/main/resources/templates/admin/goodsModify.html
+++ b/src/main/resources/templates/admin/goodsModify.html
@@ -22,7 +22,9 @@
     <div class="wrap">
         <!-- gnv_area -->
         <th:block th:replace="admin/fragments/header :: adminHeader"></th:block>
-        <!-- TODO 여기 수정페이지 복사해놓은거 알맞게 바꿔놓기 -->
+        <!-- TODO 여기 수정페이지 복사해놓은거 알맞게 바꿔놓기
+             TODO git 하기
+        -->
         <div class="admin_content_wrap">
             <div class="admin_content_main">
                 <form action="/admin/goodsEnroll" method="post" id="enrollForm">
