상품 수정 테스트 이상 없음. View에서 POST요청 했을때  제대로 적용되지 않고있음.

--- a/src/main/resources/templates/admin/goodsManage.html
+++ b/src/main/resources/templates/admin/goodsManage.html
@@ -110,7 +110,13 @@
     document.addEventListener("DOMContentLoaded", function () {
         let bookEnrollResult = [[${bookEnroll_result}]];
 
-        console.log(bookEnrollResult);
+        let bookModifyResult =[[ ${goodsModify_result} ]];
+
+        if (bookModifyResult === null || bookModifyResult === '') {
+            console.log(bookModifyResult);
+        } else {
+            alert("상품 " + [[ ${goodsModify_result}]] + "을 수정하였습니다.");
+        }
 
         checkBookEnroll(bookEnrollResult);
 
