--- a/src/main/resources/static/css/admin/authorModify.css
+++ b/src/main/resources/static/css/admin/authorModify.css
@@ -247,3 +247,11 @@ ul{
 .clearfix{
     clear: both;
 }
+
+
+.delete_btn{
+    background-color: #efcdcd;
+}
+.delete_btn:hover{
+    background-color : #e4a7a7;
+}
