--- a/src/main/resources/templates/admin/goodsEnroll.html
+++ b/src/main/resources/templates/admin/goodsEnroll.html
@@ -581,7 +581,11 @@
         str = `<div id="result_card">
                 <img src="/display?fileName=${fileCallPath}">
                 <div class="imgDeleteBtn" data-file="${fileCallPath}" onclick="deleteFile()">x</div>
-            </div>`;
+               </div>
+               <input type="hidden" name="imageList[0].fileName" value=${obj.fileName}">
+               <input type="hidden" name="imageList[0].uuid" value=${obj.uuid}">
+               <input type="hidden" name="imageList[0].uploadPath" value=${obj.uploadPath}">
+              `;
 
         uploadResult.innerHTML = str
 
