--- a/src/main/resources/static/css/admin/goodsDetail.css
+++ b/src/main/resources/static/css/admin/goodsDetail.css
@@ -266,3 +266,12 @@ ul{
 .clearfix{
     clear: both;
 }
+
+#result_card img{
+    max-width: 100%;
+    height: auto;
+    display: block;
+    padding: 5px;
+    margin-top: 10px;
+    margin: auto;
+}
